parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASYNC
    AWAIT
    BREAK
    CONTINUE
    DIVASIGN
    DOLAR
    DYN
    ENUM
    ERR
    FINAL
    FOR
    FORMAT
    IMPL
    IN
    INPUT
    INTERRO
    LCOR
    MAINFN
    MATCH
    MOVE
    MULTIASIGN
    OK
    PARSE
    POINTERSIZE
    PRIV
    PUB
    RCOR
    REF
    RESTAASIGN
    SELF
    SIZEOF
    STRUCT
    SUMAASIGN
    SUPER
    TYPE
    TYPEOF
    UNSAFE
    UNWRAPOR
    USE
    WHERE

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> metodo
Rule 2     cuerpo -> funcion
Rule 3     cuerpof -> metodo
Rule 4     cuerpof -> metodo cuerpof
Rule 5     asignacion -> LET MUT ID IGUAL valor ENDCHAR
Rule 6     asignacion -> LET MUT ID IGUAL estructuras ENDCHAR
Rule 7     metodo -> asignacion
Rule 8     metodo -> impresion
Rule 9     metodo -> loop
Rule 10    metodo -> ifblock
Rule 11    metodo -> elseifblock
Rule 12    metodo -> elseblock
Rule 13    metodo -> entrada
Rule 14    metodo -> while
Rule 15    asignacion -> LET ID IGUAL valor ENDCHAR
Rule 16    asignacion -> CONST ID COLON intsize IGUAL INTTYPE ENDCHAR
Rule 17    asignacion -> CONST ID COLON intsize IGUAL NINTTYPE ENDCHAR
Rule 18    valor -> valornumerico
Rule 19    valor -> TRUE
Rule 20    valor -> FALSE
Rule 21    valor -> ID
Rule 22    valor -> IDCHAR
Rule 23    valor -> IDSTRING
Rule 24    valor -> expresion
Rule 25    valor -> conectores
Rule 26    valor -> comparacion
Rule 27    asignacion -> CONST ID COLON uintsize IGUAL INTTYPE ENDCHAR
Rule 28    comparacion -> valorescomp signocompar valorescomp
Rule 29    asignacion -> CONST ID COLON floatsize IGUAL FLOATTYPE ENDCHAR
Rule 30    signocompar -> MAYORQUE
Rule 31    signocompar -> MENORQUE
Rule 32    signocompar -> DIFERENTE
Rule 33    signocompar -> IDENTICO
Rule 34    asignacion -> CONST ID COLON strsize IGUAL IDSTRING ENDCHAR
Rule 35    asignacion -> CONST ID COLON STRING IGUAL STRING DOSDOBLEPUNTOS FROM LPAREN IDSTRING RPAREN ENDCHAR
Rule 36    estructuras -> linkedlist
Rule 37    estructuras -> hashmap
Rule 38    estructuras -> vec
Rule 39    asignacion -> CONST ID COLON STRING IGUAL IDSTRING ENDCHAR
Rule 40    valorescomp -> ID
Rule 41    valorescomp -> IDCHAR
Rule 42    valorescomp -> IDSTRING
Rule 43    valorescomp -> INTTYPE
Rule 44    valorescomp -> NINTTYPE
Rule 45    valorescomp -> FLOATTYPE
Rule 46    valorescomp -> NFLOATTYPE
Rule 47    valorescomp -> boolean
Rule 48    asignacion -> CONST ID COLON BOOL IGUAL boolean ENDCHAR
Rule 49    while -> WHILE ifparams LLLAVE cuerpof RLLAVE
Rule 50    asignacion -> CONST ID COLON CHAR IGUAL IDCHAR ENDCHAR
Rule 51    datatype -> intsize
Rule 52    datatype -> uintsize
Rule 53    datatype -> floatsize
Rule 54    datatype -> strsize
Rule 55    datatype -> STRING
Rule 56    hashmap -> HASHMAP DOSDOBLEPUNTOS NEW LPAREN RPAREN
Rule 57    linkedlist -> LINKEDLIST DOSDOBLEPUNTOS NEW LPAREN RPAREN ENDCHAR
Rule 58    conectores -> boolean signoconect boolean
Rule 59    conectores -> EXCLAM boolean
Rule 60    conectores -> ID signoconect ID
Rule 61    vec -> VEC DOSDOBLEPUNTOS NEW LPAREN RPAREN
Rule 62    intsize -> INT8
Rule 63    intsize -> INT16
Rule 64    intsize -> INT32
Rule 65    intsize -> INT64
Rule 66    intsize -> INT128
Rule 67    expresion -> valornumerico signo valornumerico
Rule 68    signoconect -> DAMPERSAND
Rule 69    signoconect -> OR
Rule 70    valornumerico -> NINTTYPE
Rule 71    valornumerico -> INTTYPE
Rule 72    valornumerico -> FLOATTYPE
Rule 73    valornumerico -> NFLOATTYPE
Rule 74    floatsize -> FLOAT32
Rule 75    floatsize -> FLOAT64
Rule 76    loop -> LOOP LLLAVE metodo RLLAVE
Rule 77    signo -> PLUS
Rule 78    signo -> TIMES
Rule 79    signo -> MINUS
Rule 80    signo -> PORCENTAJE
Rule 81    signo -> DIVIDE
Rule 82    params -> ID COLON datatype
Rule 83    params -> ID COLON datatype COMA params
Rule 84    uintsize -> UINT8
Rule 85    uintsize -> UINT16
Rule 86    uintsize -> UINT32
Rule 87    uintsize -> UINT64
Rule 88    uintsize -> UINT128
Rule 89    funcion -> FN ID LPAREN params RPAREN LLLAVE metodo RLLAVE
Rule 90    impresion -> PRINTLN LPAREN IDSTRING RPAREN ENDCHAR
Rule 91    strsize -> AMPERSAND COMILLA STATIC STR
Rule 92    strsize -> AMPERSAND STR
Rule 93    entrada -> IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN ENDCHAR
Rule 94    entrada -> IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN POINT EXPECT LPAREN IDSTRING RPAREN ENDCHAR
Rule 95    boolean -> TRUE
Rule 96    boolean -> FALSE
Rule 97    ifparams -> ifcondicion
Rule 98    ifparams -> boolean
Rule 99    ifparams -> ID
Rule 100   elseblock -> ifblock ELSE LLLAVE cuerpof RLLAVE
Rule 101   elseblock -> elseifblock ELSE LLLAVE cuerpof RLLAVE
Rule 102   elseifblock -> ifblock ELSE IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
Rule 103   elseifblock -> ifblock ELSE IF ifparams LLLAVE cuerpof RLLAVE
Rule 104   ifblock -> IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
Rule 105   ifblock -> IF ifparams LLLAVE cuerpof RLLAVE
Rule 106   ifcondicion -> comparacion
Rule 107   ifcondicion -> comparacion signoconect ifcondicion
Rule 108   ifcondicion -> LPAREN comparacion RPAREN
Rule 109   ifcondicion -> LPAREN comparacion RPAREN signoconect ifcondicion
Rule 110   ifcondicion -> LPAREN ifcondicion RPAREN
Rule 111   funcion -> FN ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof RETURN ifparams ENDCHAR RLLAVE
Rule 112   funcion -> FN ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof ID RLLAVE

Terminals, with rules where they appear

AMPERSAND            : 91 92 93 94
ARROWOPT             : 111 112
ASYNC                : 
AWAIT                : 
BOOL                 : 48
BREAK                : 
CHAR                 : 50
COLON                : 16 17 27 29 34 35 39 48 50 82 83
COMA                 : 83
COMILLA              : 91
CONST                : 16 17 27 29 34 35 39 48 50
CONTINUE             : 
DAMPERSAND           : 68
DIFERENTE            : 32
DIVASIGN             : 
DIVIDE               : 81
DOLAR                : 
DOSDOBLEPUNTOS       : 35 56 57 61 93 94
DYN                  : 
ELSE                 : 100 101 102 103
ENDCHAR              : 5 6 15 16 17 27 29 34 35 39 48 50 57 90 93 94 111
ENUM                 : 
ERR                  : 
EXCLAM               : 59
EXPECT               : 94
FALSE                : 20 96
FINAL                : 
FLOAT32              : 74
FLOAT64              : 75
FLOATTYPE            : 29 45 72
FN                   : 89 111 112
FOR                  : 
FORMAT               : 
FROM                 : 35
HASHMAP              : 56
ID                   : 5 6 15 16 17 21 27 29 34 35 39 40 48 50 60 60 82 83 89 93 94 99 111 112 112
IDCHAR               : 22 41 50
IDENTICO             : 33
IDSTRING             : 23 34 35 39 42 90 94
IF                   : 102 103 104 105
IGUAL                : 5 6 15 16 17 27 29 34 35 39 48 50
IMPL                 : 
IN                   : 
INPUT                : 
INT128               : 66
INT16                : 63
INT32                : 64
INT64                : 65
INT8                 : 62
INTERRO              : 
INTTYPE              : 16 27 43 71
IO                   : 93 94
LCOR                 : 
LET                  : 5 6 15
LINKEDLIST           : 57
LLLAVE               : 49 76 89 100 101 102 103 104 105 111 112
LOOP                 : 76
LPAREN               : 35 56 57 61 89 90 93 93 94 94 94 102 104 108 109 110 111 112
MAINFN               : 
MATCH                : 
MAYORQUE             : 30
MENORQUE             : 31
MINUS                : 79
MOVE                 : 
MULTIASIGN           : 
MUT                  : 5 6 93 94
NEW                  : 56 57 61
NFLOATTYPE           : 46 73
NINTTYPE             : 17 44 70
OK                   : 
OR                   : 69
PARSE                : 
PLUS                 : 77
POINT                : 93 94 94
POINTERSIZE          : 
PORCENTAJE           : 80
PRINTLN              : 90
PRIV                 : 
PUB                  : 
RCOR                 : 
READLINE             : 93 94
REF                  : 
RESTAASIGN           : 
RETURN               : 111
RLLAVE               : 49 76 89 100 101 102 103 104 105 111 112
RPAREN               : 35 56 57 61 89 90 93 93 94 94 94 102 104 108 109 110 111 112
SELF                 : 
SIZEOF               : 
STATIC               : 91
STDIN                : 93 94
STR                  : 91 92
STRING               : 35 35 39 55
STRUCT               : 
SUMAASIGN            : 
SUPER                : 
TIMES                : 78
TRUE                 : 19 95
TYPE                 : 
TYPEOF               : 
UINT128              : 88
UINT16               : 85
UINT32               : 86
UINT64               : 87
UINT8                : 84
UNSAFE               : 
UNWRAPOR             : 
USE                  : 
VEC                  : 61
WHERE                : 
WHILE                : 49
error                : 

Nonterminals, with rules where they appear

asignacion           : 7
boolean              : 47 48 58 58 59 98
comparacion          : 26 106 107 108 109
conectores           : 25
cuerpo               : 0
cuerpof              : 4 49 100 101 102 103 104 105 111 112
datatype             : 82 83 111 112
elseblock            : 12
elseifblock          : 11 101
entrada              : 13
estructuras          : 6
expresion            : 24
floatsize            : 29 53
funcion              : 2
hashmap              : 37
ifblock              : 10 100 102 103
ifcondicion          : 97 107 109 110
ifparams             : 49 102 103 104 105 111
impresion            : 8
intsize              : 16 17 51
linkedlist           : 36
loop                 : 9
metodo               : 1 3 4 76 89
params               : 83 89 111 112
signo                : 67
signocompar          : 28
signoconect          : 58 60 107 109
strsize              : 34 54
uintsize             : 27 52
valor                : 5 15
valorescomp          : 28 28
valornumerico        : 18 67 67
vec                  : 38
while                : 14

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . metodo
    (2) cuerpo -> . funcion
    (7) metodo -> . asignacion
    (8) metodo -> . impresion
    (9) metodo -> . loop
    (10) metodo -> . ifblock
    (11) metodo -> . elseifblock
    (12) metodo -> . elseblock
    (13) metodo -> . entrada
    (14) metodo -> . while
    (89) funcion -> . FN ID LPAREN params RPAREN LLLAVE metodo RLLAVE
    (111) funcion -> . FN ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof RETURN ifparams ENDCHAR RLLAVE
    (112) funcion -> . FN ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof ID RLLAVE
    (5) asignacion -> . LET MUT ID IGUAL valor ENDCHAR
    (6) asignacion -> . LET MUT ID IGUAL estructuras ENDCHAR
    (15) asignacion -> . LET ID IGUAL valor ENDCHAR
    (16) asignacion -> . CONST ID COLON intsize IGUAL INTTYPE ENDCHAR
    (17) asignacion -> . CONST ID COLON intsize IGUAL NINTTYPE ENDCHAR
    (27) asignacion -> . CONST ID COLON uintsize IGUAL INTTYPE ENDCHAR
    (29) asignacion -> . CONST ID COLON floatsize IGUAL FLOATTYPE ENDCHAR
    (34) asignacion -> . CONST ID COLON strsize IGUAL IDSTRING ENDCHAR
    (35) asignacion -> . CONST ID COLON STRING IGUAL STRING DOSDOBLEPUNTOS FROM LPAREN IDSTRING RPAREN ENDCHAR
    (39) asignacion -> . CONST ID COLON STRING IGUAL IDSTRING ENDCHAR
    (48) asignacion -> . CONST ID COLON BOOL IGUAL boolean ENDCHAR
    (50) asignacion -> . CONST ID COLON CHAR IGUAL IDCHAR ENDCHAR
    (90) impresion -> . PRINTLN LPAREN IDSTRING RPAREN ENDCHAR
    (76) loop -> . LOOP LLLAVE metodo RLLAVE
    (104) ifblock -> . IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (105) ifblock -> . IF ifparams LLLAVE cuerpof RLLAVE
    (102) elseifblock -> . ifblock ELSE IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (103) elseifblock -> . ifblock ELSE IF ifparams LLLAVE cuerpof RLLAVE
    (100) elseblock -> . ifblock ELSE LLLAVE cuerpof RLLAVE
    (101) elseblock -> . elseifblock ELSE LLLAVE cuerpof RLLAVE
    (93) entrada -> . IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN ENDCHAR
    (94) entrada -> . IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN POINT EXPECT LPAREN IDSTRING RPAREN ENDCHAR
    (49) while -> . WHILE ifparams LLLAVE cuerpof RLLAVE

    FN              shift and go to state 12
    LET             shift and go to state 13
    CONST           shift and go to state 14
    PRINTLN         shift and go to state 15
    LOOP            shift and go to state 16
    IF              shift and go to state 17
    IO              shift and go to state 18
    WHILE           shift and go to state 19

    cuerpo                         shift and go to state 1
    metodo                         shift and go to state 2
    funcion                        shift and go to state 3
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    loop                           shift and go to state 6
    ifblock                        shift and go to state 7
    elseifblock                    shift and go to state 8
    elseblock                      shift and go to state 9
    entrada                        shift and go to state 10
    while                          shift and go to state 11

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> metodo .

    $end            reduce using rule 1 (cuerpo -> metodo .)


state 3

    (2) cuerpo -> funcion .

    $end            reduce using rule 2 (cuerpo -> funcion .)


state 4

    (7) metodo -> asignacion .

    $end            reduce using rule 7 (metodo -> asignacion .)
    RLLAVE          reduce using rule 7 (metodo -> asignacion .)
    LET             reduce using rule 7 (metodo -> asignacion .)
    CONST           reduce using rule 7 (metodo -> asignacion .)
    PRINTLN         reduce using rule 7 (metodo -> asignacion .)
    LOOP            reduce using rule 7 (metodo -> asignacion .)
    IF              reduce using rule 7 (metodo -> asignacion .)
    IO              reduce using rule 7 (metodo -> asignacion .)
    WHILE           reduce using rule 7 (metodo -> asignacion .)
    RETURN          reduce using rule 7 (metodo -> asignacion .)
    ID              reduce using rule 7 (metodo -> asignacion .)


state 5

    (8) metodo -> impresion .

    $end            reduce using rule 8 (metodo -> impresion .)
    RLLAVE          reduce using rule 8 (metodo -> impresion .)
    LET             reduce using rule 8 (metodo -> impresion .)
    CONST           reduce using rule 8 (metodo -> impresion .)
    PRINTLN         reduce using rule 8 (metodo -> impresion .)
    LOOP            reduce using rule 8 (metodo -> impresion .)
    IF              reduce using rule 8 (metodo -> impresion .)
    IO              reduce using rule 8 (metodo -> impresion .)
    WHILE           reduce using rule 8 (metodo -> impresion .)
    RETURN          reduce using rule 8 (metodo -> impresion .)
    ID              reduce using rule 8 (metodo -> impresion .)


state 6

    (9) metodo -> loop .

    $end            reduce using rule 9 (metodo -> loop .)
    RLLAVE          reduce using rule 9 (metodo -> loop .)
    LET             reduce using rule 9 (metodo -> loop .)
    CONST           reduce using rule 9 (metodo -> loop .)
    PRINTLN         reduce using rule 9 (metodo -> loop .)
    LOOP            reduce using rule 9 (metodo -> loop .)
    IF              reduce using rule 9 (metodo -> loop .)
    IO              reduce using rule 9 (metodo -> loop .)
    WHILE           reduce using rule 9 (metodo -> loop .)
    RETURN          reduce using rule 9 (metodo -> loop .)
    ID              reduce using rule 9 (metodo -> loop .)


state 7

    (10) metodo -> ifblock .
    (102) elseifblock -> ifblock . ELSE IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (103) elseifblock -> ifblock . ELSE IF ifparams LLLAVE cuerpof RLLAVE
    (100) elseblock -> ifblock . ELSE LLLAVE cuerpof RLLAVE

    $end            reduce using rule 10 (metodo -> ifblock .)
    RLLAVE          reduce using rule 10 (metodo -> ifblock .)
    LET             reduce using rule 10 (metodo -> ifblock .)
    CONST           reduce using rule 10 (metodo -> ifblock .)
    PRINTLN         reduce using rule 10 (metodo -> ifblock .)
    LOOP            reduce using rule 10 (metodo -> ifblock .)
    IF              reduce using rule 10 (metodo -> ifblock .)
    IO              reduce using rule 10 (metodo -> ifblock .)
    WHILE           reduce using rule 10 (metodo -> ifblock .)
    RETURN          reduce using rule 10 (metodo -> ifblock .)
    ID              reduce using rule 10 (metodo -> ifblock .)
    ELSE            shift and go to state 20


state 8

    (11) metodo -> elseifblock .
    (101) elseblock -> elseifblock . ELSE LLLAVE cuerpof RLLAVE

    $end            reduce using rule 11 (metodo -> elseifblock .)
    RLLAVE          reduce using rule 11 (metodo -> elseifblock .)
    LET             reduce using rule 11 (metodo -> elseifblock .)
    CONST           reduce using rule 11 (metodo -> elseifblock .)
    PRINTLN         reduce using rule 11 (metodo -> elseifblock .)
    LOOP            reduce using rule 11 (metodo -> elseifblock .)
    IF              reduce using rule 11 (metodo -> elseifblock .)
    IO              reduce using rule 11 (metodo -> elseifblock .)
    WHILE           reduce using rule 11 (metodo -> elseifblock .)
    RETURN          reduce using rule 11 (metodo -> elseifblock .)
    ID              reduce using rule 11 (metodo -> elseifblock .)
    ELSE            shift and go to state 21


state 9

    (12) metodo -> elseblock .

    $end            reduce using rule 12 (metodo -> elseblock .)
    RLLAVE          reduce using rule 12 (metodo -> elseblock .)
    LET             reduce using rule 12 (metodo -> elseblock .)
    CONST           reduce using rule 12 (metodo -> elseblock .)
    PRINTLN         reduce using rule 12 (metodo -> elseblock .)
    LOOP            reduce using rule 12 (metodo -> elseblock .)
    IF              reduce using rule 12 (metodo -> elseblock .)
    IO              reduce using rule 12 (metodo -> elseblock .)
    WHILE           reduce using rule 12 (metodo -> elseblock .)
    RETURN          reduce using rule 12 (metodo -> elseblock .)
    ID              reduce using rule 12 (metodo -> elseblock .)


state 10

    (13) metodo -> entrada .

    $end            reduce using rule 13 (metodo -> entrada .)
    RLLAVE          reduce using rule 13 (metodo -> entrada .)
    LET             reduce using rule 13 (metodo -> entrada .)
    CONST           reduce using rule 13 (metodo -> entrada .)
    PRINTLN         reduce using rule 13 (metodo -> entrada .)
    LOOP            reduce using rule 13 (metodo -> entrada .)
    IF              reduce using rule 13 (metodo -> entrada .)
    IO              reduce using rule 13 (metodo -> entrada .)
    WHILE           reduce using rule 13 (metodo -> entrada .)
    RETURN          reduce using rule 13 (metodo -> entrada .)
    ID              reduce using rule 13 (metodo -> entrada .)


state 11

    (14) metodo -> while .

    $end            reduce using rule 14 (metodo -> while .)
    RLLAVE          reduce using rule 14 (metodo -> while .)
    LET             reduce using rule 14 (metodo -> while .)
    CONST           reduce using rule 14 (metodo -> while .)
    PRINTLN         reduce using rule 14 (metodo -> while .)
    LOOP            reduce using rule 14 (metodo -> while .)
    IF              reduce using rule 14 (metodo -> while .)
    IO              reduce using rule 14 (metodo -> while .)
    WHILE           reduce using rule 14 (metodo -> while .)
    RETURN          reduce using rule 14 (metodo -> while .)
    ID              reduce using rule 14 (metodo -> while .)


state 12

    (89) funcion -> FN . ID LPAREN params RPAREN LLLAVE metodo RLLAVE
    (111) funcion -> FN . ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof RETURN ifparams ENDCHAR RLLAVE
    (112) funcion -> FN . ID LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof ID RLLAVE

    ID              shift and go to state 22


state 13

    (5) asignacion -> LET . MUT ID IGUAL valor ENDCHAR
    (6) asignacion -> LET . MUT ID IGUAL estructuras ENDCHAR
    (15) asignacion -> LET . ID IGUAL valor ENDCHAR

    MUT             shift and go to state 23
    ID              shift and go to state 24


state 14

    (16) asignacion -> CONST . ID COLON intsize IGUAL INTTYPE ENDCHAR
    (17) asignacion -> CONST . ID COLON intsize IGUAL NINTTYPE ENDCHAR
    (27) asignacion -> CONST . ID COLON uintsize IGUAL INTTYPE ENDCHAR
    (29) asignacion -> CONST . ID COLON floatsize IGUAL FLOATTYPE ENDCHAR
    (34) asignacion -> CONST . ID COLON strsize IGUAL IDSTRING ENDCHAR
    (35) asignacion -> CONST . ID COLON STRING IGUAL STRING DOSDOBLEPUNTOS FROM LPAREN IDSTRING RPAREN ENDCHAR
    (39) asignacion -> CONST . ID COLON STRING IGUAL IDSTRING ENDCHAR
    (48) asignacion -> CONST . ID COLON BOOL IGUAL boolean ENDCHAR
    (50) asignacion -> CONST . ID COLON CHAR IGUAL IDCHAR ENDCHAR

    ID              shift and go to state 25


state 15

    (90) impresion -> PRINTLN . LPAREN IDSTRING RPAREN ENDCHAR

    LPAREN          shift and go to state 26


state 16

    (76) loop -> LOOP . LLLAVE metodo RLLAVE

    LLLAVE          shift and go to state 27


state 17

    (104) ifblock -> IF . LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (105) ifblock -> IF . ifparams LLLAVE cuerpof RLLAVE
    (97) ifparams -> . ifcondicion
    (98) ifparams -> . boolean
    (99) ifparams -> . ID
    (106) ifcondicion -> . comparacion
    (107) ifcondicion -> . comparacion signoconect ifcondicion
    (108) ifcondicion -> . LPAREN comparacion RPAREN
    (109) ifcondicion -> . LPAREN comparacion RPAREN signoconect ifcondicion
    (110) ifcondicion -> . LPAREN ifcondicion RPAREN
    (95) boolean -> . TRUE
    (96) boolean -> . FALSE
    (28) comparacion -> . valorescomp signocompar valorescomp
    (40) valorescomp -> . ID
    (41) valorescomp -> . IDCHAR
    (42) valorescomp -> . IDSTRING
    (43) valorescomp -> . INTTYPE
    (44) valorescomp -> . NINTTYPE
    (45) valorescomp -> . FLOATTYPE
    (46) valorescomp -> . NFLOATTYPE
    (47) valorescomp -> . boolean

    LPAREN          shift and go to state 28
    ID              shift and go to state 32
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    IDCHAR          shift and go to state 37
    IDSTRING        shift and go to state 38
    INTTYPE         shift and go to state 39
    NINTTYPE        shift and go to state 40
    FLOATTYPE       shift and go to state 41
    NFLOATTYPE      shift and go to state 42

    ifparams                       shift and go to state 29
    ifcondicion                    shift and go to state 30
    boolean                        shift and go to state 31
    comparacion                    shift and go to state 33
    valorescomp                    shift and go to state 36

state 18

    (93) entrada -> IO . DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN ENDCHAR
    (94) entrada -> IO . DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN POINT EXPECT LPAREN IDSTRING RPAREN ENDCHAR

    DOSDOBLEPUNTOS  shift and go to state 43


state 19

    (49) while -> WHILE . ifparams LLLAVE cuerpof RLLAVE
    (97) ifparams -> . ifcondicion
    (98) ifparams -> . boolean
    (99) ifparams -> . ID
    (106) ifcondicion -> . comparacion
    (107) ifcondicion -> . comparacion signoconect ifcondicion
    (108) ifcondicion -> . LPAREN comparacion RPAREN
    (109) ifcondicion -> . LPAREN comparacion RPAREN signoconect ifcondicion
    (110) ifcondicion -> . LPAREN ifcondicion RPAREN
    (95) boolean -> . TRUE
    (96) boolean -> . FALSE
    (28) comparacion -> . valorescomp signocompar valorescomp
    (40) valorescomp -> . ID
    (41) valorescomp -> . IDCHAR
    (42) valorescomp -> . IDSTRING
    (43) valorescomp -> . INTTYPE
    (44) valorescomp -> . NINTTYPE
    (45) valorescomp -> . FLOATTYPE
    (46) valorescomp -> . NFLOATTYPE
    (47) valorescomp -> . boolean

    ID              shift and go to state 32
    LPAREN          shift and go to state 45
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    IDCHAR          shift and go to state 37
    IDSTRING        shift and go to state 38
    INTTYPE         shift and go to state 39
    NINTTYPE        shift and go to state 40
    FLOATTYPE       shift and go to state 41
    NFLOATTYPE      shift and go to state 42

    ifparams                       shift and go to state 44
    ifcondicion                    shift and go to state 30
    boolean                        shift and go to state 31
    comparacion                    shift and go to state 33
    valorescomp                    shift and go to state 36

state 20

    (102) elseifblock -> ifblock ELSE . IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (103) elseifblock -> ifblock ELSE . IF ifparams LLLAVE cuerpof RLLAVE
    (100) elseblock -> ifblock ELSE . LLLAVE cuerpof RLLAVE

    IF              shift and go to state 46
    LLLAVE          shift and go to state 47


state 21

    (101) elseblock -> elseifblock ELSE . LLLAVE cuerpof RLLAVE

    LLLAVE          shift and go to state 48


state 22

    (89) funcion -> FN ID . LPAREN params RPAREN LLLAVE metodo RLLAVE
    (111) funcion -> FN ID . LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof RETURN ifparams ENDCHAR RLLAVE
    (112) funcion -> FN ID . LPAREN params RPAREN ARROWOPT datatype LLLAVE cuerpof ID RLLAVE

    LPAREN          shift and go to state 49


state 23

    (5) asignacion -> LET MUT . ID IGUAL valor ENDCHAR
    (6) asignacion -> LET MUT . ID IGUAL estructuras ENDCHAR

    ID              shift and go to state 50


state 24

    (15) asignacion -> LET ID . IGUAL valor ENDCHAR

    IGUAL           shift and go to state 51


state 25

    (16) asignacion -> CONST ID . COLON intsize IGUAL INTTYPE ENDCHAR
    (17) asignacion -> CONST ID . COLON intsize IGUAL NINTTYPE ENDCHAR
    (27) asignacion -> CONST ID . COLON uintsize IGUAL INTTYPE ENDCHAR
    (29) asignacion -> CONST ID . COLON floatsize IGUAL FLOATTYPE ENDCHAR
    (34) asignacion -> CONST ID . COLON strsize IGUAL IDSTRING ENDCHAR
    (35) asignacion -> CONST ID . COLON STRING IGUAL STRING DOSDOBLEPUNTOS FROM LPAREN IDSTRING RPAREN ENDCHAR
    (39) asignacion -> CONST ID . COLON STRING IGUAL IDSTRING ENDCHAR
    (48) asignacion -> CONST ID . COLON BOOL IGUAL boolean ENDCHAR
    (50) asignacion -> CONST ID . COLON CHAR IGUAL IDCHAR ENDCHAR

    COLON           shift and go to state 52


state 26

    (90) impresion -> PRINTLN LPAREN . IDSTRING RPAREN ENDCHAR

    IDSTRING        shift and go to state 53


state 27

    (76) loop -> LOOP LLLAVE . metodo RLLAVE
    (7) metodo -> . asignacion
    (8) metodo -> . impresion
    (9) metodo -> . loop
    (10) metodo -> . ifblock
    (11) metodo -> . elseifblock
    (12) metodo -> . elseblock
    (13) metodo -> . entrada
    (14) metodo -> . while
    (5) asignacion -> . LET MUT ID IGUAL valor ENDCHAR
    (6) asignacion -> . LET MUT ID IGUAL estructuras ENDCHAR
    (15) asignacion -> . LET ID IGUAL valor ENDCHAR
    (16) asignacion -> . CONST ID COLON intsize IGUAL INTTYPE ENDCHAR
    (17) asignacion -> . CONST ID COLON intsize IGUAL NINTTYPE ENDCHAR
    (27) asignacion -> . CONST ID COLON uintsize IGUAL INTTYPE ENDCHAR
    (29) asignacion -> . CONST ID COLON floatsize IGUAL FLOATTYPE ENDCHAR
    (34) asignacion -> . CONST ID COLON strsize IGUAL IDSTRING ENDCHAR
    (35) asignacion -> . CONST ID COLON STRING IGUAL STRING DOSDOBLEPUNTOS FROM LPAREN IDSTRING RPAREN ENDCHAR
    (39) asignacion -> . CONST ID COLON STRING IGUAL IDSTRING ENDCHAR
    (48) asignacion -> . CONST ID COLON BOOL IGUAL boolean ENDCHAR
    (50) asignacion -> . CONST ID COLON CHAR IGUAL IDCHAR ENDCHAR
    (90) impresion -> . PRINTLN LPAREN IDSTRING RPAREN ENDCHAR
    (76) loop -> . LOOP LLLAVE metodo RLLAVE
    (104) ifblock -> . IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (105) ifblock -> . IF ifparams LLLAVE cuerpof RLLAVE
    (102) elseifblock -> . ifblock ELSE IF LPAREN ifparams RPAREN LLLAVE cuerpof RLLAVE
    (103) elseifblock -> . ifblock ELSE IF ifparams LLLAVE cuerpof RLLAVE
    (100) elseblock -> . ifblock ELSE LLLAVE cuerpof RLLAVE
    (101) elseblock -> . elseifblock ELSE LLLAVE cuerpof RLLAVE
    (93) entrada -> . IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN ENDCHAR
    (94) entrada -> . IO DOSDOBLEPUNTOS STDIN LPAREN RPAREN POINT READLINE LPAREN AMPERSAND MUT ID RPAREN POINT EXPECT LPAREN IDSTRING RPAREN ENDCHAR
    (49) while -> . WHILE ifparams LLLAVE cuerpof RLLAVE

    LET             shift and go to state 13
    CONST           shift and go to state 14
    PRINTLN         shift and go to state 15
    LOOP            shift and go to state 16
    IF              shift and go to state 17
    IO              shift and go to state 18
    WHILE           shift and go to state 19

    metodo                         shift and go to state 54
    asignacion                     shift and go to state 4
    impresion                      shift and go to state 5
    loop                           shift and go to state 6
    ifblock                        shift and go to state 7
    elseifblock                    shift and go to state 8
    elseblock                      shift and go to state 9
    entrada                        shift and go to state 10
    while                          shift and go to state 11

state 28
